client/src/App.css
body {
  margin: 0;
  background-color: seashell;
  font-family: monospace;
  position: relative;
}
nav {
  position: relative;
  z-index: 4;
  background-color: papayawhip;
  margin-top: 0;
  height: 50px;
  display: flex;
  flex-direction: row;
  justify-content: center;
}
ul {
  list-style: none;
  display: flex;
  justify-content: space-around;
  width: 100%;
}
.link {
  text-decoration: none;
  color: black;
  font-size: 15pt;
  font-weight: 600;
}
.link:hover {
  border-bottom: 3px solid grey;
  color: midnightblue;
}
.link:active {
  border-bottom: 5px solid black;
  color: orange;
}
.book {
  display: grid;
  position: relative;
  grid-template: 1fr / 1fr 1fr 1fr 10px;
  grid-gap: 20px;
  justify-self: stretch;
  border: 1px solid black;

}
.delete {
  position: absolute;
  top: 0;
  right: 8px;
  font-size: 20pt;
  opacity: .1;
}
.delete:hover {
  cursor: pointer;
  font-weight: bold;
  opacity: .5;
}
.delete:active {
  color: red;
  font-weight: bolder;
  opacity: 1;
}
.delete-account {
  position: absolute;
  top: 70px;
  right: 20px;
}
img {
  height: 100%;
  max-height: 450px;
  max-width: 300px;
  background-color: black;
  color: white;
  font-size: 65pt;
  overflow: auto;
  word-wrap: break-word;
}
.book img:hover {
  animation: imganimhover .25s ease-in-out 1 normal;
  border-left: 15px solid black;
  opacity: .6;
  cursor: pointer;
}
.book-info:hover {
  animation: bookanimhover .5s ease-in-out 1 normal;
  border-left: 5px solid black;
  font-weight: 600;
  cursor: pointer;
  background-color: peachpuff;
}
.memory:hover {
  animation: bookanimhover .5s ease-in-out 1 normal;
  border-left: 5px solid black;
  padding-left: 10px;
  font-weight: 600;
  cursor: pointer;
  background-color: peachpuff;
}
.book-info:active {
  animation: bookanimactive .25s ease-in-out 1 normal;
  border-left: 20px solid black;
  padding-left: 20px;
  background-color: grey;
  cursor: pointer;
}
.memory:active {
  animation: bookanimactive .25s ease-in-out 1 normal;
  border-left: 20px solid black;
  padding-left: 20px;
  background-color: grey;
  cursor: pointer;
}
.book-info {
  width: 80%;
  padding: 10px;
  padding-left: 20px;
}
.book-info span {
  color: orange;
  font-size: 15pt;
  overflow-wrap: break-word;
}
.modal {
  position: fixed;
  top: 0;
  opacity: .8;
  height: 100vh;
  width: 100vw;
  background-color: white;
  font-size: 30pt;
  display: flex;
  flex-direction: row;
  justify-content: center;
}
form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.close {
  width: 100%;
}
.book-cover {
  width: 1100px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.book-cover img {
  height: 600px;
}
.book-cover input {
  width: 98%;
}
.book-memory {
  width: 1500px;
}
.book-memory input {
  width: 98%;
}
.book-memory textarea {
  width: 98%;
  height: 100px;
}
.memory span {
  color: orange;
  font-size: 13pt;
  word-spacing: -5px;
  letter-spacing: -1px;
  overflow-wrap: break-word;
}
.memory {
  margin-left: -30px;
}
.options {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 10px;
  font-size: 11pt;
  display: flex;
}
#minimize {
  position: absolute;
  border: 1px solid grey;
  color: grey;
  font-size: 20pt;
  opacity: .5;
}
#minimize:hover {
  color: black;
  cursor: pointer;
  font-weight: bold;
  opacity: 1;
}
#minimize:active {
  color: white;
  cursor: pointer;
  font-weight: bold;
  background-color: grey;
}
.options input {
  margin: 10px;
}
.category {
  margin: 10px;
}
.new-book {
  display: flex;
  align-self: center;
  padding: 10px;
  border: 1px solid black;
  cursor: pointer;
}
.new-book:hover {
  background-color: grey;
}
.new-book:active {
  background-color: black;
  color: white;
}
.start-finish {
  cursor: pointer;
}
.start-finish:hover {
  color: lime;
}
.start-finish:active {
  color: red;
}
.inputs {
  width: 100%;
  text-align: center;
}
.memora {
  font-size: 70pt;
  text-align: center;
}
.bib {
  color: midnightblue;
}
.lia {
  color: cadetblue;
}
.dot {
  color: grey;
  opacity: .3;
  animation: myframes 1s ease-in-out 1 normal;
}
.subtext {
  text-align: center;
  font-style: italic;
  color: black;
}
.subtext-parent {
  position: relative;
}
.subtext-boxes {
  position: absolute;
  top: 140px;
  display: grid;
  grid-template: 1fr / 1fr 1fr 1fr;
  grid-gap: 11px;
  color: grey;
  opacity: .5;
  margin-left: 15px;
}
.current-reading {
  display: flex;
  justify-content: space-around;
  margin-top: 70px;
}
.current-reading div img {
  height: 400px;
  box-shadow: 0 30px 40px rgba(0,0,0,1);
  margin-bottom: 100px;
}
.scroll-covers {
  position: absolute;
  bottom: 35px;
}
.scroll-covers button {
  margin: 15px;
}
.selection {
  font-size: 15pt;
}
.random-color {
  font-size: 15pt;
}
.random-color:hover {
  font-weight: bold;
  cursor: pointer;
}
.random-color:active {
  color: grey;
}
.profile-words {
  color: black;
}
.profile-words:hover {
  font-weight: bold;
  cursor: pointer;
}
.profile-words:active {
  color: grey;
}
#login {
  position: relative;
  align-self: center;
  width: 500px;
  box-shadow: 0 30px 40px rgba(0,0,0,.2);
  animation: login 1s ease-in-out 1 normal;
}
#loginForm {
  display: flex;
  flex-direction: column;
}
#loginForm label {
  padding: 20px;
  padding-top: 6px;
  text-align: center;
  margin: 10px;
}
.opb:hover {
  cursor: pointer;
  font-weight: bold;
}
.opb:active {
  color: lime;
}
#read-to-remember {
  display: flex;
  text-align: center;
  z-index: -1;
  height: 400px;
  margin-top: 110px;
  margin-bottom: 100px;
  justify-content: space-between;
  letter-spacing: 10px;
  opacity: .3;
  font-size: 50pt;
  border: 3px solid grey;
  border-radius: 20px;
  padding: 50px;
}
#r-t-r-wrapper {
  display: flex;
  position: absolute;
  z-index: -1;
  top: 120px;
  justify-content: center;
  width: 100%;
  height: 300px;
}
#read-to-remember div {
  opacity: .5;
}
/* ... */

